objects/License_Translations__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Multiplier__c</fullName>
        <label>Assigned Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Key</label>
        <referenceTo>LMS_License_Keys__c</referenceTo>
        <relationshipLabel>License Translations</relationshipLabel>
        <relationshipName>License_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Part_Number__c</fullName>
        <formula>Product__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>License Translations</relationshipLabel>
        <relationshipName>License_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proxy_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in SIP Proxy new license generation. The proxy override server parts will hit SIPProxyOverride endpoint</description>
        <label>Proxy Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIP_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIP Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Assigned_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Assigned Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <label>License Translations</label>
    <listViews>
        <fullName>All_License_Translations</fullName>
        <columns>NAME</columns>
        <columns>Item_Number__c</columns>
        <columns>Product__c</columns>
        <columns>License_Key__c</columns>
        <columns>Assigned_Multiplier__c</columns>
        <columns>Multiplier__c</columns>
        <columns>Show_Assigned_Multiplier__c</columns>
        <columns>SIP_Product__c</columns>
        <columns>Proxy_Override__c</columns>
        <columns>Notes__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Number__c</field>
            <operation>contains</operation>
        </filters>
        <label>All License Translations</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>